Add ability to expose services on different ports + FAT tests

--- a/dev/com.ibm.ws.microprofile.metrics_fat/build.gradle
+++ b/dev/com.ibm.ws.microprofile.metrics_fat/build.gradle
@@ -10,5 +10,6 @@
  *******************************************************************************/
 	
 dependencies {
+  requiredLibs project(':com.ibm.ws.kernel.boot')
 }
 
