misc fixes to spec10_part01 bucket
Signed-off-by: Will Dazey <dazeydev.3@gmail.com>

--- a/dev/com.ibm.ws.jpa_spec10_part01_fat/.classpath
+++ b/dev/com.ibm.ws.jpa_spec10_part01_fat/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="fat/src"/>
 	<classpathentry kind="src" path="test-applications/callback/src"/>
 	<classpathentry kind="src" path="test-applications/entitymanager/src"/>
+	<classpathentry kind="src" path="test-applications/example/src"/>
 	<classpathentry kind="src" path="test-applications/inheritance/src"/>
 	<classpathentry kind="src" path="test-applications/olgh10310/src"/>
 	<classpathentry kind="src" path="test-applications/olgh11795/src"/>
