Increasing jakarta testing for connectors

--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-dd.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-dd.properties
@@ -20,7 +20,10 @@ javax.resource.cci.ConnectionFactory=jakarta.resource.cci.ConnectionFactory
 javax.resource.cci.ConnectionSpec=jakarta.resource.cci.ConnectionSpec
 javax.resource.cci.InteractionSpec=jakarta.resource.cci.InteractionSpec
 javax.resource.cci.MessageListener=jakarta.resource.cci.MessageListener
+javax.resource.spi.BootstrapContext=jakarta.resource.spi.BootstrapContext
 javax.resource.spi.security.PasswordCredential=jakarta.resource.spi.security.PasswordCredential
+javax.resource.spi.work.ExecutionContext=jakarta.resource.spi.work.ExecutionContext
+javax.resource.spi.work.TransactionContext=jakarta.resource.spi.work.TransactionContext
 javax.transaction.UserTransaction=jakarta.transaction.UserTransaction
 javax.transaction.TransactionSynchronizationRegistry=jakarta.transaction.TransactionSynchronizationRegistry
 javax.ws.rs.Application=jakarta.ws.rs.Application
