--- a/dev/io.openliberty.org.apache.jasper.expressionLanguage.4.0/.project
+++ b/dev/io.openliberty.org.apache.jasper.expressionLanguage.4.0/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>io.openliberty.jakarta.el.4.0</name>
+	<name>io.openliberty.org.apache.jasper.expressionLanguage.4.0</name>
 	<comment></comment>
 	<projects>
 	</projects>
