--- a/dev/com.ibm.ws.webcontainer.servlet.4.0_fat/test-applications/Servlet5TestApp.war/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.webcontainer.servlet.4.0_fat/test-applications/Servlet5TestApp.war/resources/WEB-INF/web.xml
@@ -18,4 +18,7 @@
 		<url-pattern>/snoop5</url-pattern>
 	</servlet-mapping>
 
+	<error-page>
+		<location>/jsp/errorPage.jsp</location>
+	</error-page>
 </web-app>
