Upgrade httpcomponents and consolidate

--- a/dev/com.ibm.ws.jsfContainer_fat_2.2/build.gradle
+++ b/dev/com.ibm.ws.jsfContainer_fat_2.2/build.gradle
@@ -19,8 +19,7 @@ dependencies {
     'net.sourceforge.htmlunit:htmlunit:2.15',
     'net.sourceforge.htmlunit:htmlunit-core-js:2.15',
     'org.apache.commons:commons-lang3:3.8',
-    'org.apache.httpcomponents:httpclient:4.3.1',
-    'org.apache.httpcomponents:httpcore:4.3',
+    project(':com.ibm.ws.org.apache.httpcomponents'),
     'org.apache.httpcomponents:httpmime:4.3.1',
     'org.eclipse.jetty:jetty-util:9.4.7.RC0',
     'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
