--- a/dev/com.ibm.ws.cdi.third.party_fat/build.gradle
+++ b/dev/com.ibm.ws.cdi.third.party_fat/build.gradle
@@ -48,10 +48,7 @@ dependencies {
     'com.google.code.gson:gson:2.8.5',
     'commons-codec:commons-codec:1.10',
     'commons-logging:commons-logging:1.1.3',
-    'org.apache.httpcomponents:httpasyncclient:4.1.2',
-    'org.apache.httpcomponents:httpclient:4.5.2',
-    'org.apache.httpcomponents:httpcore:4.4.5',
-    'org.apache.httpcomponents:httpcore-nio:4.4.5',
+    project(':com.ibm.ws.org.apache.httpcomponents'),
     'org.apache.lucene:lucene-analyzers-common:5.5.5',
     'org.apache.lucene:lucene-core:5.5.5',
     'org.apache.lucene:lucene-facet:5.5.5',
