--- a/dev/com.ibm.ws.couchdb_fat/build.gradle
+++ b/dev/com.ibm.ws.couchdb_fat/build.gradle
@@ -27,9 +27,8 @@ dependencies {
           'commons-codec:commons-codec:1.6',
           'commons-io:commons-io:2.6',
           'commons-logging:commons-logging:1.1.1',
-          'org.apache.httpcomponents:httpclient:4.3.1',
+          project(':com.ibm.ws.org.apache.httpcomponents'),
           'org.apache.httpcomponents:httpclient-cache:4.3.1',
-          'org.apache.httpcomponents:httpcore:4.3',
           'org.ektorp:org.ektorp:1.4.1',
           'org.slf4j:slf4j-api:1.7.7',
           'org.slf4j:slf4j-jdk14:1.7.7'
