--- a/dev/com.ibm.ws.jaxrs.2.1_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.1_fat/build.gradle
@@ -24,8 +24,7 @@ repositories {
 }
 
 dependencies {
-  requiredLibs 'org.apache.httpcomponents:httpclient:4.3.1',
-	'org.apache.httpcomponents:httpcore:4.3'
+  requiredLibs project(':com.ibm.ws.org.apache.httpcomponents')
 }
 
 task copyAPI(type: Copy) {
