--- a/dev/com.ibm.ws.jaxrs.2.x.webcontainer_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.x.webcontainer_fat/build.gradle
@@ -41,8 +41,7 @@ dependencies {
     'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.4.1'
   requiredLibs 'commons-httpclient:commons-httpclient:3.1',
     'commons-logging:commons-logging:1.2',
-    'org.apache.httpcomponents:httpclient:4.3.1',
-    'org.apache.httpcomponents:httpcore:4.3',
+    project(':com.ibm.ws.org.apache.httpcomponents'),
     'org.apache.httpcomponents:httpmime:4.3.1',
     'com.fasterxml.jackson.core:jackson-core:2.4.1',
     'com.fasterxml.jackson.core:jackson-databind:2.4.1',
