--- a/dev/com.ibm.ws.security.acme_fat/build.gradle
+++ b/dev/com.ibm.ws.security.acme_fat/build.gradle
@@ -23,8 +23,7 @@ dependencies {
                'org.testcontainers:testcontainers:1.14.0',
                'org.slf4j:slf4j-api:1.7.7',
                'org.slf4j:slf4j-jdk14:1.7.7',
-               'org.apache.httpcomponents:httpclient:4.5.5',
-               'org.apache.httpcomponents:httpcore:4.4.9',
+               project(':com.ibm.ws.org.apache.httpcomponents'),
                'commons-logging:commons-logging:1.1.1',
                'org.shredzone.acme4j:acme4j-client:2.7',
                'org.shredzone.acme4j:acme4j-utils:2.7',
