--- a/dev/com.ibm.ws.security.fat.common.jwt/build.gradle
+++ b/dev/com.ibm.ws.security.fat.common.jwt/build.gradle
@@ -18,8 +18,7 @@ dependencies {
 				'net.sourceforge.htmlunit:htmlunit:2.27',
 				'org.apache.commons:commons-lang3:3.5',
 				'org.apache.commons:commons-lang3:3.8',
-				'org.apache.httpcomponents:httpclient:4.5.4',
-				'org.apache.httpcomponents:httpcore:4.4.9',
+				project(':com.ibm.ws.org.apache.httpcomponents'),
 				'org.eclipse.birt.runtime:org.w3c.css.sac:1.3.1.v200903091627',
 				'org.eclipse.jetty.websocket:websocket-api:9.4.5.v20170502',
 				'org.eclipse.jetty.websocket:websocket-client:9.4.5.v20170502',
