--- a/dev/com.ibm.ws.security.jwt_fat.consumer/build.gradle
+++ b/dev/com.ibm.ws.security.jwt_fat.consumer/build.gradle
@@ -14,8 +14,7 @@ dependencies {
   requiredLibs project(':com.ibm.ws.security.fat.common.jwt'),
 	project(':com.ibm.ws.org.jose4j'),
   	  'commons-logging:commons-logging:1.1.3',
-      'org.apache.httpcomponents:httpclient:4.5.4',
-      'org.apache.httpcomponents:httpcore:4.4.9',
+      project(':com.ibm.ws.org.apache.httpcomponents'),
       'net.sourceforge.htmlunit:htmlunit:2.27',
       'net.sourceforge.htmlunit:htmlunit-core-js:2.27',
       'net.sourceforge.cssparser:cssparser:0.9.23',
