--- a/dev/com.ibm.ws.security.jwtsso_fat/build.gradle
+++ b/dev/com.ibm.ws.security.jwtsso_fat/build.gradle
@@ -13,8 +13,7 @@ apply from: '../wlp-gradle/subprojects/fat.gradle'
 dependencies {
   requiredLibs project(':com.ibm.ws.security.fat.common'),
       'commons-logging:commons-logging:1.1.3',
-      'org.apache.httpcomponents:httpclient:4.5.4',
-      'org.apache.httpcomponents:httpcore:4.4.9',
+      project(':com.ibm.ws.org.apache.httpcomponents'),
       'net.sourceforge.htmlunit:htmlunit:2.27',
       'net.sourceforge.htmlunit:htmlunit-core-js:2.27',
       'net.sourceforge.cssparser:cssparser:0.9.23',
