--- a/dev/com.ibm.ws.springboot.support_fat/build.gradle
+++ b/dev/com.ibm.ws.springboot.support_fat/build.gradle
@@ -14,8 +14,7 @@
       'net.sourceforge.htmlunit:htmlunit:2.27',
       'net.sourceforge.htmlunit:htmlunit-core-js:2.27',
       'org.apache.commons:commons-lang3:3.8',
-      'org.apache.httpcomponents:httpclient:4.5.4',
-      'org.apache.httpcomponents:httpcore:4.4.9',
+      project(':com.ibm.ws.org.apache.httpcomponents'),
       'org.apache.httpcomponents:httpmime:4.3.1',
       'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
       'org.eclipse.birt.runtime:org.w3c.css.sac:1.3.1.v200903091627',
