--- a/dev/com.ibm.ws.transport.http.remoteip_fat/build.gradle
+++ b/dev/com.ibm.ws.transport.http.remoteip_fat/build.gradle
@@ -12,7 +12,6 @@
 // Define G:A:V coordinates of each dependency
 dependencies {
   requiredLibs 'commons-logging:commons-logging:1.1.3',
-	'org.apache.httpcomponents:httpclient:4.5.4',
-	'org.apache.httpcomponents:httpcore:4.4.9'
+	project(':com.ibm.ws.org.apache.httpcomponents')
 }
 
