--- a/dev/com.ibm.ws.grpc_fat/build.gradle
+++ b/dev/com.ibm.ws.grpc_fat/build.gradle
@@ -90,14 +90,20 @@ dependencies {
     providedCompile 'org.eclipse.microprofile:microprofile:3.2'
     
     // test runtime 
-    requiredLibs 'net.sourceforge.cssparser:cssparser:0.9.23',
-      'net.sourceforge.htmlunit:htmlunit:2.20',
-      'net.sourceforge.htmlunit:htmlunit-core-js:2.17',
+    requiredLibs 'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
+      'net.sourceforge.htmlunit:htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:webdriver:2.6',
+      'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+      'org.brotli:dec:0.1.2',
+      'xerces:xercesImpl:2.11.0',
+      'xalan:xalan:2.7.2',
+      'commons-io:commons-io:2.6',
+      'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
       'org.apache.commons:commons-lang3:3.8',
       'commons-codec:commons-codec:1.11',
       'org.apache.httpcomponents:httpmime:4.5.3',
-      'org.apache.httpcomponents:httpclient:4.5.4',
-      'org.apache.httpcomponents:httpcore:4.4.9',
+      project(':com.ibm.ws.org.apache.httpcomponents'),
       'commons-codec:commons-codec:1.6',
       'commons-logging:commons-logging:1.1.3',
       'xml-apis:xml-apis:1.4.01',
