--- a/dev/com.ibm.ws.jsfContainer_fat_2.2/build.gradle
+++ b/dev/com.ibm.ws.jsfContainer_fat_2.2/build.gradle
@@ -15,9 +15,16 @@ configurations {
 }
 
 dependencies {
-  requiredLibs 'net.sourceforge.cssparser:cssparser:0.9.23',
-    'net.sourceforge.htmlunit:htmlunit:2.15',
-    'net.sourceforge.htmlunit:htmlunit-core-js:2.15',
+  requiredLibs 'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
+    'net.sourceforge.htmlunit:htmlunit:2.44.0',
+    'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+    'net.sourceforge.htmlunit:webdriver:2.6',
+    'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+    'org.brotli:dec:0.1.2',
+    'xerces:xercesImpl:2.11.0',
+    'xalan:xalan:2.7.2',
+    'commons-io:commons-io:2.6',
+    'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
     'org.apache.commons:commons-lang3:3.8',
     project(':com.ibm.ws.org.apache.httpcomponents'),
     'org.apache.httpcomponents:httpmime:4.3.1',
@@ -37,6 +44,7 @@ dependencies {
     'commons-digester:commons-digester:1.8',
     'commons-collections:commons-collections:3.2.1',
     'commons-logging:commons-logging:1.1.3',
+    'org.apache.commons:commons-text:1.9',
     'commons-beanutils:commons-beanutils:1.9.4',
     'com.ibm.ws.javax.j2ee:persistence:2.1'
 }
