--- a/dev/com.ibm.ws.jsfContainer_fat_2.3/build.gradle
+++ b/dev/com.ibm.ws.jsfContainer_fat_2.3/build.gradle
@@ -16,14 +16,20 @@ configurations {
 }
 
 dependencies {
-    requiredLibs 'net.sourceforge.cssparser:cssparser:0.9.23',
-      'net.sourceforge.htmlunit:htmlunit:2.20',
-      'net.sourceforge.htmlunit:htmlunit-core-js:2.17',
+    requiredLibs 'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
+      'net.sourceforge.htmlunit:htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:webdriver:2.6',
+      'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+      'org.brotli:dec:0.1.2',
+      'xerces:xercesImpl:2.11.0',
+      'xalan:xalan:2.7.2',
+      'commons-io:commons-io:2.6',
+      'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
       'org.apache.commons:commons-lang3:3.8',
       'commons-codec:commons-codec:1.11',
       'org.apache.httpcomponents:httpmime:4.5.3',
-      'org.apache.httpcomponents:httpclient:4.5.4',
-      'org.apache.httpcomponents:httpcore:4.4.9',
+      project(':com.ibm.ws.org.apache.httpcomponents'),
       'org.eclipse.jetty:jetty-io:9.2.15.v20160210',
       'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
       'org.eclipse.jetty.websocket:websocket-client:9.2.15.v20160210',
