--- a/dev/com.ibm.ws.security.fat.common.jwt/build.gradle
+++ b/dev/com.ibm.ws.security.fat.common.jwt/build.gradle
@@ -13,9 +13,15 @@ apply from: '../wlp-gradle/subprojects/fat.gradle'
 dependencies {
   requiredLibs 'commons-codec:commons-codec:1.6',
 				'commons-logging:commons-logging:1.1.3',
-				'net.sourceforge.cssparser:cssparser:0.9.23',
-				'net.sourceforge.htmlunit:htmlunit-core-js:2.27',
-				'net.sourceforge.htmlunit:htmlunit:2.27',
+				'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
+				'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
+				'net.sourceforge.htmlunit:htmlunit:2.44.0',
+        'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+        'net.sourceforge.htmlunit:webdriver:2.6',
+        'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+        'org.brotli:dec:0.1.2',
+        'xalan:xalan:2.7.2',
+        'commons-io:commons-io:2.6',
 				'org.apache.commons:commons-lang3:3.5',
 				'org.apache.commons:commons-lang3:3.8',
 				project(':com.ibm.ws.org.apache.httpcomponents'),
