--- a/dev/com.ibm.ws.security.jwt_fat.consumer/build.gradle
+++ b/dev/com.ibm.ws.security.jwt_fat.consumer/build.gradle
@@ -15,9 +15,13 @@ dependencies {
 	project(':com.ibm.ws.org.jose4j'),
   	  'commons-logging:commons-logging:1.1.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
-      'net.sourceforge.htmlunit:htmlunit:2.27',
-      'net.sourceforge.htmlunit:htmlunit-core-js:2.27',
-      'net.sourceforge.cssparser:cssparser:0.9.23',
+      'net.sourceforge.htmlunit:htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:webdriver:2.6',
+      'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+      'org.brotli:dec:0.1.2',
+      'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
+      'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
       'org.apache.commons:commons-lang3:3.8',
       'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
       'org.eclipse.jetty.websocket:websocket-api:9.4.5.v20170502',
@@ -27,6 +31,8 @@ dependencies {
       'org.eclipse.birt.runtime:org.w3c.css.sac:1.3.1.v200903091627',
       'commons-codec:commons-codec:1.6',
       'xml-apis:xml-apis:1.4.01',
+      'xalan:xalan:2.7.2',
+      'commons-io:commons-io:2.6',
       'xerces:xercesImpl:2.11.0',
       'org.slf4j:slf4j-api:1.7.7'
       
