--- a/dev/com.ibm.ws.security.mp.jwt.1.2_fat/build.gradle
+++ b/dev/com.ibm.ws.security.mp.jwt.1.2_fat/build.gradle
@@ -15,9 +15,15 @@ dependencies {
   		project(':com.ibm.ws.security.mp.jwt.1.1_fat'),
       'commons-logging:commons-logging:1.1.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
-      'net.sourceforge.htmlunit:htmlunit:2.27',
-      'net.sourceforge.htmlunit:htmlunit-core-js:2.27',
-      'net.sourceforge.cssparser:cssparser:0.9.23',
+      'net.sourceforge.htmlunit:htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:neko-htmlunit:2.44.0',
+      'net.sourceforge.htmlunit:webdriver:2.6',
+      'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
+      'org.brotli:dec:0.1.2',
+      'xalan:xalan:2.7.2',
+      'commons-io:commons-io:2.6',
+      'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
+      'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
       'org.apache.commons:commons-lang3:3.5',
       'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
       'org.eclipse.jetty.websocket:websocket-api:9.4.5.v20170502',
