--- a/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-renames.properties
@@ -159,6 +159,7 @@ org.jboss.weld.construction.api=org.jboss.weld.construction.api
 org.jboss.weld.context=org.jboss.weld.context
 org.jboss.weld.context.api=org.jboss.weld.context.api
 org.jboss.weld.context.bound=org.jboss.weld.context.bound
+org.jboss.weld.context.http=org.jboss.weld.context.http
 org.jboss.weld.contexts=org.jboss.weld.contexts
 org.jboss.weld.ejb.api=org.jboss.weld.ejb.api
 org.jboss.weld.ejb.spi=org.jboss.weld.ejb.spi
@@ -207,6 +208,3 @@ org.eclipse.persistence.platform.database=org.eclipse.persistence.platform.datab
 org.eclipse.persistence.sessions=org.eclipse.persistence.sessions
 org.eclipse.persistence.tools.schemaframework=org.eclipse.persistence.tools.schemaframework
 org.eclipse.persistence.transaction=org.eclipse.persistence.transaction
-
-
-
