--- a/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-versions.properties
@@ -134,6 +134,7 @@ org.jboss.weld.construction.api=[4.0,5)
 org.jboss.weld.context=[4.0,5)
 org.jboss.weld.context.api=[4.0,5)
 org.jboss.weld.context.bound=[4.0,5)
+org.jboss.weld.context.http=[4.0,5)
 org.jboss.weld.contexts=[4.0,5)
 org.jboss.weld.ejb.api=[4.0,5)
 org.jboss.weld.ejb.spi=[4.0,5)
