Add Property Expression FAT test to mpConfig-2.0
create test to check that variable replacement is honoured in server.xml

--- a/dev/io.openliberty.microprofile.config.2.0.internal_fat/publish/servers/Config20Server/bootstrap.properties
+++ b/dev/io.openliberty.microprofile.config.2.0.internal_fat/publish/servers/Config20Server/bootstrap.properties
@@ -4,3 +4,5 @@ io.openliberty.microprofile.config.internal_fat.apps.brokenInjection.ConfigUnnam
 io.openliberty.microprofile.config.internal_fat.apps.brokenInjection.ConfigUnnamedMethodInjectionBean.SIMPLE_KEY6=VALUE6
 noConverterKey=value
 org.jboss.logging.provider=slf4j
+value1DefinedInBootstrapProperties=value1
+value2DefinedInBootstrapProperties=value2
