--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat/build.gradle
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat/build.gradle
@@ -104,6 +104,7 @@ autoFVT.doLast {
     'com.ibm.ws.security.wim.adapter.ldap.fat.ETSFforGroupM',
     'com.ibm.ws.security.wim.adapter.ldap.fat.federation',
     'com.ibm.ws.security.wim.adapter.ldap.fat.input.output.mapping',
+    'com.ibm.ws.security.wim.adapter.ldap.fat.loginproperty',
     'com.ibm.ws.security.wim.adapter.ldap.fat.multipleldaps',
     'com.ibm.ws.security.wim.adapter.ldap.fat.operationalattribute',
     'com.ibm.ws.security.wim.adapter.ldap.fat.realm.mapping',
