--- a/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/servers/FATServer/bootstrap.properties
+++ b/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/servers/FATServer/bootstrap.properties
@@ -9,5 +9,5 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bootstrap.include=../testports.properties
-#com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.microprofile.rest*=all:org.apache.cxf.*=all:com.ibm.ws.jaxrs*=all
+com.ibm.ws.logging.trace.specification=*=info:org.eclipse.microprofile.rest.client.tck.sse.*=all:org.apache.cxf.microprofile.client.*=all
 com.ibm.ws.logging.max.files=1
