Update group validation for operational attribute membership

--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat/build.gradle
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat/build.gradle
@@ -105,6 +105,7 @@ autoFVT.doLast {
     'com.ibm.ws.security.wim.adapter.ldap.fat.federation',
     'com.ibm.ws.security.wim.adapter.ldap.fat.input.output.mapping',
     'com.ibm.ws.security.wim.adapter.ldap.fat.multipleldaps',
+    'com.ibm.ws.security.wim.adapter.ldap.fat.operationalattribute',
     'com.ibm.ws.security.wim.adapter.ldap.fat.realm.mapping',
     'com.ibm.ws.security.wim.adapter.ldap.fat.referral',
     'com.ibm.ws.security.wim.adapter.ldap.fat.search.paging',
