--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -556,6 +556,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 50
+    - name: Reclaim disk space
+      run: .github/workflow-scripts/reclaim-disk-space.sh
     - uses: testspace-com/setup-testspace@v1
       with:
         domain: ${{ github.repository_owner }}
