--- a/dev/com.ibm.ws.jsf.2.3_fat/build.gradle
+++ b/dev/com.ibm.ws.jsf.2.3_fat/build.gradle
@@ -23,14 +23,13 @@ dependencies {
       'commons-codec:commons-codec:1.11',
       'org.apache.httpcomponents:httpmime:4.5.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
-      'org.eclipse.jetty:jetty-io:9.2.15.v20160210',
-      'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
-      'org.eclipse.jetty.websocket:websocket-client:9.2.15.v20160210',
-      'org.eclipse.jetty.websocket:websocket-api:9.2.15.v20160210',
-      'org.eclipse.jetty.websocket:websocket-common:9.2.15.v20160210',
-      'org.eclipse.jetty:jetty-websocket:8.2.0.v20160908',
-      'org.eclipse.jetty:jetty-util:9.2.15.v20160210',
-      'org.eclipse.jetty:jetty-http:9.4.9.v20180320',
+      'org.eclipse.jetty:jetty-util:9.4.33.v20201020',
+      'org.eclipse.jetty.websocket:websocket-api:9.4.33.v20201020',
+      'org.eclipse.jetty.websocket:websocket-client:9.4.33.v20201020',
+      'org.eclipse.jetty.websocket:websocket-common:9.4.33.v20201020',
+      'org.eclipse.jetty:jetty-io:9.4.33.v20201020',
+      'org.eclipse.jetty:jetty-http:9.4.33.v20201020',
+      'org.eclipse.jetty:jetty-client:9.4.33.v20201020',
       'org.eclipse.birt.runtime:org.w3c.css.sac:1.3.1.v200903091627',
       'commons-logging:commons-logging:1.1.3',
       'org.apache.commons:commons-text:1.9',
