--- a/dev/wlp-gradle/subprojects/fat.gradle
+++ b/dev/wlp-gradle/subprojects/fat.gradle
@@ -83,16 +83,11 @@ task addRequiredLibraries(type: Copy) {
   into new File(autoFvtDir, 'lib')
 }
 
-task addJakartaTransformerRules {
+task addJakartaTransformerRules(type: Copy) {
   mustRunAfter jar
-
-  doLast{
-    copy {
-      from project(':wlp-jakartaee-transform').file('rules')
-      include 'jakarta*.properties'
-      into new File(autoFvtDir, 'autoFVT-templates')
-    }
-  }
+  from project(':wlp-jakartaee-transform').file('rules')
+  include 'jakarta*.properties'
+  into new File(autoFvtDir, 'autoFVT-templates')
 }
 
 task addJakartaTransformer(type: Copy) {
@@ -128,16 +123,16 @@ task copyDatabaseRotationDrivers(type: Copy) {
   into new File(autoFvtDir, 'lib')
 }
 
-task copyFattestDatabases {
-  mustRunAfter jar
-  
-  doLast{
-    copy {
-        from project(':fattest.databases').buildDir
-        include 'fattest*.*'
-        into new File(autoFvtDir, 'lib')
+if (findProject(':fattest.databases') != null) {
+    // Not all projects include fattest.databases, so we must conditionally define the task
+    // otherwise project(':fattest.databases') will not be found and raise an error
+    task copyFattestDatabases(type: Copy) {
+      mustRunAfter jar
+      dependsOn ':fattest.databases:assemble'
+      from new File(project(':fattest.databases').buildDir, 'libs')
+      include 'fattest.databases.jar'
+      into new File(autoFvtDir, 'lib')
     }
-  }
 }
 
 task copyFeatureBundles {
