load on startup a wsoc fvt servlet

--- a/dev/io.openliberty.wsoc.internal_fat/test-applications/basic.war/resources/WEB-INF/web.xml
+++ b/dev/io.openliberty.wsoc.internal_fat/test-applications/basic.war/resources/WEB-INF/web.xml
@@ -38,6 +38,13 @@
  	      <load-on-startup>1</load-on-startup>
     </servlet>
     
+   <servlet>
+        <servlet-name>URIOverlappingServlet</servlet-name>
+ 	      <servlet-class>basic.war.servlet.URIOverlappingServlet</servlet-class>
+ 	      <load-on-startup>1</load-on-startup>
+    </servlet>
+    
+    
     <filter> 
        <filter-name>UpgradeFilter</filter-name>
        <filter-class>basic.war.UpgradeFilter</filter-class>
