trying to beat the fvt roulette odds

--- a/dev/io.openliberty.wsoc.internal_fat/test-applications/basic.war/resources/WEB-INF/web.xml
+++ b/dev/io.openliberty.wsoc.internal_fat/test-applications/basic.war/resources/WEB-INF/web.xml
@@ -19,6 +19,7 @@
 	<servlet>
         <servlet-name>SingleRequestTestRunner</servlet-name>
  	      <servlet-class>io.openliberty.wsoc.common.SingleRequestClientTestRunner</servlet-class>
+          <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
