Update locale to en_US.UTF-8

--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -17,7 +17,7 @@ on:
       - 'images/**'
       - 'logos/**'
 env:
-  LANG: en_US
+  LANG: en_US.UTF-8
 jobs:
   build:
     name: Build Open Liberty
