--- a/dev/com.ibm.websphere.appserver.features/build.gradle
+++ b/dev/com.ibm.websphere.appserver.features/build.gradle
@@ -74,7 +74,7 @@ task copyFeaturePiiFiles {
       Properties featureProps = map[featureName]
       if ('public'.equals(featureProps['visibility'])) {
         copy {
-          from project.file('public/' + featureProps['IBM-ShortName'] + '/resources')
+          from project.file('visibility/public/' + featureProps['IBM-ShortName'] + '/resources')
           into rootProject.file('build.pii.package/nlssrc/' + featureName)
           include 'l10n/*.properties'
         }
