--- a/dev/com.ibm.ws.jaxrs.2.0.client_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.0.client_fat/build.gradle
@@ -8,6 +8,20 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+repositories {
+  if (isUsingArtifactory) {
+    maven {
+      credentials {
+        username userProps.getProperty("artifactory.download.user")
+        password userProps.getProperty("artifactory.download.token")
+      }
+      url ("https://" + gradle.userProps.getProperty("artifactory.download.server") + "/artifactory/wasliberty-maven-remote")
+    }
+  } else {
+    mavenCentral()
+  }
+}
+
 configurations {
   thirdpartyjerseyclient
   mockserver
