--- a/dev/com.ibm.ws.microprofile.rest.client_fat/publish/servers/mpRestClient11.cdiPropsAndProviders/bootstrap.properties
+++ b/dev/com.ibm.ws.microprofile.rest.client_fat/publish/servers/mpRestClient11.cdiPropsAndProviders/bootstrap.properties
@@ -5,6 +5,7 @@ bootstrap.include=../testports.properties
 
 # enable the mpConfig for RestClient's baseURL
 mpRestClient11.cdiPropsAndProviders.CdiPropsAndProvidersClient/mp-rest/url=http://localhost:${bvt.prop.HTTP_secondary}/basicRemoteApp/basic
+mpRestClient11.cdiPropsAndProviders.UnusedClient/mp-rest/url=http://localhost:${bvt.prop.HTTP_secondary}/basicRemoteApp/unused
 
 org.jboss.weld.probe.allowRemoteAddress=.*
 #if set to true, there is an issue with MP Config 1.4
