--- a/dev/wlp-jakartaee-transform/rules/jakarta-metatype.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-metatype.properties
@@ -1,3 +1,6 @@
+# For com.ibm.ws.concurrent/resources/OSGI-INF/metatype/metatype.xml
+javax.enterprise.concurrent.ManagedExecutorService=jakarta.enterprise.concurrent.ManagedExecutorService
+javax.enterprise.concurrent.ManagedScheduledExecutorService=jakarta.enterprise.concurrent.ManagedScheduledExecutorService
 # For com.ibm.ws.messaging.jms.common/OSGI-INF/metatype/metatype.xml
 # and test server configurations
 "javax.jms.ConnectionFactory"="jakarta.jms.ConnectionFactory"
