--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -48,9 +48,10 @@ io.openliberty.org.jboss.resteasy.jaxb.provider.ResourceProvider.xml=jakarta-res
 # Messaging
 com.ibm.ws.jca.processor.jms.service.JMSDestinationResourceFactoryBuilder.xml=jakarta-messaging.properties
 com.ibm.ws.jca.processor.jms.service.JMSConnectionFactoryResourceBuilder.xml=jakarta-messaging.properties
-metatype.xml=jakarta-messaging-metatype.properties
-SharedSubscriptionDurClient.xml=jakarta-messaging-metatype.properties
-SharedSubscriptionNonDurClient.xml=jakarta-messaging-metatype.properties
+SharedSubscriptionDurClient.xml=jakarta-metatype.properties
+SharedSubscriptionNonDurClient.xml=jakarta-metatype.properties
+# Metatype (needed by Concurrency and Messaging)
+metatype.xml=jakarta-metatype.properties
 # Connectors
 com.ibm.ws.jca.activationSpec.supertype.xml=jakarta-resource.properties
 com.ibm.ws.jca.adminObject.supertype.xml=jakarta-resource.properties
