Further enabling of jakartaee in jsonb FAT

--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -71,3 +71,6 @@ faces-config1.xml=jakarta-faces-config.properties
 com.ibm.ws.security.inflow.context.provider.xml=jakarta-connectors.properties
 com.ibm.ws.jca17.processor.service.ConnectionFactoryResourceBuilder.xml=jakarta-resource.properties
 com.ibm.ws.security.javaeesec.cdi.extensions.JavaEESecCDIExtension.xml=jakarta-xml-securityEnterprise.properties
+# jsonb FAT
+test.jsonb.bundle.ServiceThatRequiresJsonb.xml=jakarta-jsonProvider.properties
+test.jsonp.bundle.ServiceThatRequiresJsonp.xml=jakarta-jsonProvider.properties
