--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -45,6 +45,7 @@ io.openliberty.org.jboss.resteasy.servlet.initializer.xml=jakarta-restfulWS.prop
 io.openliberty.org.jboss.resteasy.common.component.LibertyResteasyCdiExtension.xml=jakarta-restfulWS.properties
 io.openliberty.restfulWS30.jsonb20provider.ResourceProvider.xml=jakarta-restfulWS.properties
 io.openliberty.org.jboss.resteasy.jaxb.provider.ResourceProvider.xml=jakarta-restfulWS.properties
+io.openliberty.org.jboss.resteasy.validator.provider.ResourceProvider.xml=jakarta-restfulWS.properties
 # Messaging
 com.ibm.ws.jca.processor.jms.service.JMSDestinationResourceFactoryBuilder.xml=jakarta-messaging.properties
 com.ibm.ws.jca.processor.jms.service.JMSConnectionFactoryResourceBuilder.xml=jakarta-messaging.properties
