Put jmsmdb EJBJAR back under jmsapp, and back in the apps folder. Add transform step for MDB server configurations, which have activation specifications. Correct the tests which update configured features to use the correct features when running in the jakarta repeat. Misc code fixes.

--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -46,12 +46,14 @@ io.openliberty.org.jboss.resteasy.common.component.LibertyResteasyCdiExtension.x
 io.openliberty.restfulWS30.jsonb20provider.ResourceProvider.xml=jakarta-restfulWS.properties
 io.openliberty.org.jboss.resteasy.jaxb.provider.ResourceProvider.xml=jakarta-restfulWS.properties
 io.openliberty.org.jboss.resteasy.validator.provider.ResourceProvider.xml=jakarta-restfulWS.properties
-# Messaging
-com.ibm.ws.jca.processor.jms.service.JMSDestinationResourceFactoryBuilder.xml=jakarta-messaging.properties
-com.ibm.ws.jca.processor.jms.service.JMSConnectionFactoryResourceBuilder.xml=jakarta-messaging.properties
+# Messaging (uses a subset of the metatype properties)
 SharedSubscriptionDurClient.xml=jakarta-metatype.properties
 SharedSubscriptionNonDurClient.xml=jakarta-metatype.properties
+DelayClient_TopicMDB_TCP.xml=jakarta-metatype.properties
+DelayClient_QueueMDB_TCP.xml=jakarta-metatype.properties
 # Metatype (needed by Concurrency and Messaging)
+com.ibm.ws.jca.processor.jms.service.JMSDestinationResourceFactoryBuilder.xml=jakarta-metatype.properties
+com.ibm.ws.jca.processor.jms.service.JMSConnectionFactoryResourceBuilder.xml=jakarta-metatype.properties
 metatype.xml=jakarta-metatype.properties
 # Connectors
 com.ibm.ws.jca.activationSpec.supertype.xml=jakarta-resource.properties
