Put jmsmdb EJBJAR back under jmsapp, and back in the apps folder. Add transform step for MDB server configurations, which have activation specifications. Correct the tests which update configured features to use the correct features when running in the jakarta repeat. Misc code fixes.

--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -70,3 +70,13 @@ faces-config1.xml=jakarta-faces-config.properties
 com.ibm.ws.security.inflow.context.provider.xml=jakarta-connectors.properties
 com.ibm.ws.jca17.processor.service.ConnectionFactoryResourceBuilder.xml=jakarta-resource.properties
 com.ibm.ws.security.javaeesec.cdi.extensions.JavaEESecCDIExtension.xml=jakarta-xml-securityEnterprise.properties
+#messaging
+# Delivery delay server configurations which require transformation.
+# These server configurations contain activiation specifications,
+# which contain a destination type which is a JMS class reference.
+# For example, 'destinationType="javax.jms.Topic"'
+DelayClient_MDB.xml=jakarta-messaging-metatype.properties
+DelayClient_TopicMDB_TCP.xml=jakarta-messaging-metatype.properties
+DelayClient_TopicMDB_Binding.xml=jakarta-messaging-metatype.properties
+DelayClient_QueueMDB_Bindings.xml=jakarta-messaging-metatype.properties
+DelayClient_QueueMDB_TCP.xml=jakarta-messaging-metatype.properties
