Made changes to run tests on OL - Updated copyrights - Changed application build process - Updated servers with non OL features

--- a/dev/io.openliberty.wsoc.internal_fat/build.gradle
+++ b/dev/io.openliberty.wsoc.internal_fat/build.gradle
@@ -39,6 +39,16 @@ addRequiredLibraries {
       from configurations.junit
       into "${buildDir}/autoFVT/test-applications/basic.war/resources/WEB-INF/lib"
     }
+    copy {
+      // Copy junit jars into a specific folder so they can be referenced
+      from configurations.junit
+      into "${buildDir}/autoFVT/test-applications/trace.war/resources/WEB-INF/lib"
+    }
+    copy {
+      // Copy junit jars into a specific folder so they can be referenced
+      from configurations.junit
+      into "${buildDir}/autoFVT/test-applications/secure.war/resources/WEB-INF/lib"
+    }
   }
 }
 
